--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,20 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/swiper/swiper-bundle.css",
+              "node_modules/swiper/modules/effect-coverflow/effect-coverflow.min.css"
             ],
             "scripts": []
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
@@ -90,7 +98,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/swiper/swiper-bundle.css",
+              "node_modules/swiper/modules/effect-coverflow/effect-coverflow.min.css"
             ],
             "scripts": []
           }
