--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "install": "^0.13.0",
+    "npm": "^9.6.1",
     "rxjs": "~7.8.0",
+    "swiper": "^7.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
