--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,15 @@
             "styles": [
               "src/styles.css",
               "node_modules/swiper/swiper-bundle.css",
-              "node_modules/swiper/modules/effect-coverflow/effect-coverflow.min.css"
+              "node_modules/swiper/modules/effect-coverflow/effect-coverflow.min.css",
+              "node_modules/prismjs/themes/prism-okaidia.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/marked.min.js",
+              "node_modules/prismjs/prism.js",
+              "node_modules/prismjs/components/prism-csharp.min.js",
+              "node_modules/prismjs/components/prism-css.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -94,9 +100,15 @@
             "styles": [
               "src/styles.css",
               "node_modules/swiper/swiper-bundle.css",
-              "node_modules/swiper/modules/effect-coverflow/effect-coverflow.min.css"
+              "node_modules/swiper/modules/effect-coverflow/effect-coverflow.min.css",
+              "node_modules/prismjs/themes/prism-okaidia.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/marked.min.js",
+               "node_modules/prismjs/prism.js",
+               "node_modules/prismjs/components/prism-csharp.min.js",
+               "node_modules/prismjs/components/prism-css.min.js"
+            ]
           }
         }
       }
