--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@angular/youtube-player": "^15.2.4",
     "install": "^0.13.0",
+    "marked": "^4.3.0",
+    "ngx-markdown": "^15.1.2",
     "npm": "^9.6.1",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "swiper": "^7.0.8",
     "tslib": "^2.3.0",
@@ -30,6 +34,7 @@
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/marked": "^4.0.8",
     "angular-cli-ghpages": "^1.0.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
